--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "node-sass": "^9.0.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
+    "sass-loader": "^13.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
