--- a/front_saunalog/package.json
+++ b/front_saunalog/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "fibers": "^5.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
