--- a/front_saunalog/package.json
+++ b/front_saunalog/package.json
@@ -13,7 +13,8 @@
     "sass": "^1.66.1",
     "sass-loader": "^10.4.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
