--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "migration:create": "npx ts-node ./node_modules/.bin/typeorm migration:create -n",
     "migration:generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate -n ",
     "migration:run": "npx ts-node ./node_modules/.bin/typeorm migration:run",
-    "migration:status": "npx ts-node ./node_modules/.bin/typeorm migration:show",
+    "migration:show": "npx ts-node ./node_modules/.bin/typeorm migration:show",
     "migration:revert": "npx ts-node ./node_modules/.bin/typeorm migration:revert"
   },
   "dependencies": {
