--- a/backend/package.json
+++ b/backend/package.json
@@ -33,11 +33,13 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cookie-session": "^2.0.46",
     "@types/express-session": "^1.17.9",
     "@types/passport": "^1.0.14",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-session": "^2.0.0",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
